[package]
name = "twrs-sms"
version = "0.1.1"
authors = ["Ricky (Degausser) <Ricky@Hosfelt.io>"]
edition = "2018"
keywords = ["twilio", "bot", "http", "POST", "sms"]
exclude = ["target", "Cargo.lock"]
description = "Small library to send POST requests to Twilio API"
homepage = "https://github.com/emailnjv/twrs-sms"
repository = "https://github.com/emailnjv/twrs-sms"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
reqwest = {version = "0.11", features = ["rustls-tls", "socks", "json"]}
serde = {version = "1", features = ["derive"]}
serde_urlencoded = "0.6"
serde_json = "1"
mockito = "0"
tokio = { version = "1", features = ["full"] }

